# agent-mark

./: .env.example  .gitignore  ARCHITECTURE.md  README.md
backend/: DESIGN.md  pyproject.toml
backend/app/: container.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: structure.py
backend/app/infrastructure/formatters/: markdown_formatter.py
backend/app/infrastructure/llm/: langchain_llm_adapter.py
backend/app/infrastructure/prompts/templates/: prompt_repository.py  v1.txt
backend/app/ports/: formatter_port.py  llm_port.py  prompt_port.py
backend/app/schemas/: errors.py  request.py  response.py
backend/app/services/: structuring_orchestrator.py
backend/config/: settings.py
