[tool.poetry]
name = "agent-mark"
version = "0.1.0"
description = "AgentMark: AI 기반 비정형 텍스트 구조화 및 자동화 도구"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
langchain = "^0.1.0"
langchain-google-genai = "^0.0.5" 
langchain-openai = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"